chandeliers-lus/tests/compile_fail/ui/tc/const/node.rs
chandeliers_lus::decl! {
    const X : float = test(5);
}

fn main() {}
