chandeliers-lus/tests/compile_fail/ui/tc/const/node.stderr
error: Function calls are not valid in const contexts
 --> tests/fail/ui/tc/const/node.rs:2:5
  |
2 |     const X : float = test(5);
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: You must put this definition inside a node
